Setup activity_setting layout
activity_setting layout을 만든다.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,15 @@
   <string name="text_dialogs">dialogs</string>
   <string name="text_name">name</string>
   <string name="text_weather">weather</string>
+  <string name="item_header_textview_name_text">name</string>
+  <string name="item_header_textview_date_text">date</string>
+  <string name="item_header_textview_weather_text">weather</string>
+  <string name="SETTING_MAIN_ADD_QUESTION">Add Question</string>
+  <string name="SETTING_MAIN_COPYRIGHT">© 2018. Vacation homework.</string>
+  <string name="SETTING_MAIN_FRIENDS_SETTING">Friends Setting</string>
+  <string name="SETTING_MAIN_LINK_ACCOUNT">Link Account</string>
+  <string name="SETTING_MAIN_NOTIFICATION">Notification</string>
+  <string name="SETTING_MAIN_SUPPORT">Support</string>
+  <string name="SETTING_MAIN_VERSION">Version 0.1</string>
+
 </resources>
