Make setFriend function
Initialize friendsSetting Activity
Set header title
Add backAction in FriendsSettingActivity
Change StateManager to StateManagerWrapper in FriendsSettingPresenter
Add friends setting layout
Add edit profile function
Make requestGetPartnersProfileDetail function
Set data in friends_setting layout, callback action later
Fix empty line
Change PartnerProfileDetailResponse class to PartnerProfileDetailEntry
Make multiline in PartenerProfile class
Change alphabetical order
Change method name
Delete empty space  and empty line
Fix multi line
Change method name

Fixes https://github.com/chatty-app/chatty-app/issues/32

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,9 @@
   <string name="SETTING_MAIN_NOTIFICATION">Notification</string>
   <string name="SETTING_MAIN_SUPPORT">Support</string>
   <string name="SETTING_MAIN_VERSION">Version 0.1</string>
+  <string name="SETTING_PROFILE_MAIN_DIARY">Diaries written together</string>
+  <string name="SETTING_PROFILE_MAIN_DURING">Days we have shared</string>
+  <string name="SETTING_PROFILE_MAIN_EDIT_BUTTON">Edit Friend</string>
+  <string name="SETTING_PROFILE_MAIN_STARTDATE">The first day we met</string>
 
 </resources>
